--- a/front/src/components/BoardItem/style.css
+++ b/front/src/components/BoardItem/style.css
@@ -1,7 +1,7 @@
 #board-item-wrap {
   background-color: #d9d9d9;
   width: 380px;
-  height: 480px;
+  height: 520px;
   border-radius: 10px;
   padding: 10px 20px;
   margin: 0px 30px;
@@ -9,13 +9,24 @@
 }
 
 .board-item-middle-box {
-  height: 380px;
+  height: 350px;
+  background-image: url(../../assets/image/default-img2.png);
+  /* background-image: url(https://fastly.picsum.photos/id/866/500/300.jpg?hmac=gTBX2xIXKy_WSASp2ITBfmK7WFeBZyiuIumiEUmowcw); */
+
+  background-position: center;
+  background-size: cover;
+  border-radius: 10px;
+
+  background-repeat: no-repeat;
+
+  /* 비율 유지 */
+  /* background-size: contain;  */
 }
 
 .board-item-title {
   width: 100%;
   font-size: 24px;
-
+  margin-top: 15px;
   white-space: nowrap; /* 텍스트를 한 줄로 표시, 줄바꿈 없음 */
   overflow: hidden; /* 넘치는 텍스트 숨김 */
   text-overflow: ellipsis; /* 넘치는 텍스트는 "..."으로 대체 */
@@ -29,7 +40,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 10px;
+  margin: 10px 0px;
 }
 
 .board-item-profile,
@@ -88,9 +99,30 @@
   display: flex;
   align-items: center; /* 세로 정렬 중앙으로 */
   font-size: 16px;
-  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .board-item-write-date {
   font-size: 14px;
+}
+
+.board-item-category {
+  margin-right: 10px;
+  color: #666666;
+  font-size: 18px;
+}
+
+.board-item-counts-left {
+  display: flex;
+}
+
+.board-item-counts {
+  justify-content: space-between;
+}
+
+.board-item-bottom-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100px;
 }
