--- a/front/src/components/BoardItem/style.css
+++ b/front/src/components/BoardItem/style.css
@@ -1,5 +1,5 @@
 #board-item-wrap {
-  background-color: #d9d9d9;
+  background-color: #d9d9d982;
   width: 380px;
   height: 520px;
   border-radius: 10px;
@@ -99,7 +99,6 @@
   display: flex;
   align-items: center; /* 세로 정렬 중앙으로 */
   font-size: 16px;
-  margin-right: 10px;
 }
 
 .board-item-write-date {
@@ -107,13 +106,15 @@
 }
 
 .board-item-category {
-  margin-right: 10px;
   color: #666666;
   font-size: 18px;
 }
 
 .board-item-counts-left {
   display: flex;
+}
+.board-item-counts-left > div {
+  margin-right: 10px;
 }
 
 .board-item-counts {
