--- a/front/src/views/UserPage/style.css
+++ b/front/src/views/UserPage/style.css
@@ -166,16 +166,16 @@
 .my-profile-modify-btn1,
 .my-profile-modify-btn2 {
   position: absolute;
-  right: 0; /* 오른쪽 끝으로 정렬 */
-  top: 50%; /* 세로 중앙에 위치 */
-  transform: translateY(-50%); /* 세로 중앙에 정확히 위치하도록 조정 */
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
   background-color: #f0f0f0;
 
   border: 1px solid rgb(213, 213, 213);
   border-radius: 10px;
   padding: 8px 16px;
   cursor: pointer;
-  z-index: 1; /* InputBox 위로 올라오게 */
+  z-index: 1;
 }
 
 .my-profile-password-box,
@@ -186,8 +186,8 @@
   height: 50px;
 
   display: flex;
-  justify-content: center; /* 가로 중앙 정렬 */
-  align-items: center; /* 세로 중앙 정렬 */
+  justify-content: center;
+  align-items: center;
 }
 
 .my-profile1-box {
@@ -196,8 +196,8 @@
   height: 50px;
 
   display: flex;
-  justify-content: center; /* 가로 중앙 정렬 */
-  align-items: center; /* 세로 중앙 정렬 */
+  justify-content: center;
+  align-items: center;
 }
 
 .my-profile-password-text,
@@ -223,7 +223,7 @@
 }
 
 .user-modify::after {
-  content: " >"; /* 여기에 특수문자 >를 삽입합니다 */
+  content: " >";
 }
 
 .nicknameModify-container {
@@ -256,4 +256,156 @@
   color: #646464;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.delete-user-page1-wrap {
+  height: 1000px;
+}
+
+.delete-user-page-container {
+  background-color: #fafafa;
+  padding: 30px 0px 20px 0px;
+  margin: 100px auto;
+  width: 1100px;
+}
+
+.delete-user-page-top {
+}
+
+.delete-user-page-top-item1 > div:nth-of-type(2) {
+  color: rgb(63, 63, 63);
+}
+
+.delete-user-page-top-item1 {
+  margin-left: 30px;
+}
+
+.delete-user-page-mid {
+}
+
+.delete-user-page-bottem {
+}
+
+.delete-user-page-top-title {
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+
+.delete-user-page-hr {
+  margin: 30px 0px 30px 30px;
+  width: 30px;
+  background: rgb(195, 195, 195);
+  height: 1px;
+  border: 0;
+}
+
+.delete-user-page-mid-title {
+  font-size: 15px;
+}
+
+.delete-user-page-mid-item1 > div:nth-of-type(2),
+.delete-user-page-mid-item2 > div:nth-of-type(2),
+.delete-user-page-mid-item3 > div:nth-of-type(2),
+.delete-user-page-mid-item4 > div:nth-of-type(2),
+.delete-user-page-mid-item5 > div:nth-of-type(2) {
+  color: rgb(160, 160, 160);
+}
+
+.delete-user-page-mid > div {
+  margin: 40px 30px;
+}
+
+.delete-user-page-bottem-item1 {
+  display: flex;
+  margin-left: 30px;
+}
+
+.delete-user-page-bottem-item1 > div {
+  font-size: 17px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+}
+
+/*  */
+
+.custom-checkbox {
+  position: relative;
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+}
+
+.custom-checkbox input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.custom-checkbox .checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 24px;
+  background-color: #e2e2e2;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.custom-checkbox input:checked + .checkmark {
+  background-color: #8e8e8e;
+}
+
+.custom-checkbox .checkmark::after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.custom-checkbox input:checked + .checkmark::after {
+  display: block;
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+.delete-user-page-bottem-item2-confirm {
+  border-radius: 4px;
+}
+
+/* 체크된 상태 색상 */
+.delete-user-page-bottem-item2-confirm.checked {
+  background-color: #8e8e8e;
+  color: white;
+}
+
+/*  */
+
+.delete-user-page-bottem-item2 {
+  display: flex;
+  justify-content: center;
+  margin: 40px 0px;
+}
+
+.delete-user-page-bottem-item2-cancel,
+.delete-user-page-bottem-item2-confirm {
+  border: 1px solid rgb(103, 103, 103);
+  border-radius: 2px;
+  width: 200px;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.delete-user-page-bottem-item2-confirm {
+  margin-left: 30px;
 }
